--- a/requirements.txt
+++ b/requirements.txt
@@ -1,27 +1,59 @@
-numpy
-pandas
-xarray
-
-geopandas
-shapely
-fiona
-pyyaml
-rasterio
-rioxarray
-geopandas
-shapely
-pyproj
-
-scipy
-scikit-image
-
-streamlit
-matplotlib
-plotly
-folium
-contextily
-
-tqdm
-jupyter
-ipykernel
-
+certifi==2025.11.12
+fastjsonschema==2.21.2
+geopandas==1.1.1
+jupyterlab_widgets==3.0.16
+kiwisolver==1.4.9
+lark==1.3.1
+MarkupSafe==3.0.3
+mistune==3.1.4
+narwhals==2.12.0
+nest-asyncio==1.6.0
+networkx==3.6
+numpy==2.3.5
+packaging==25.0
+pandas==2.3.3
+pandocfilters==1.5.1
+parso==0.8.5
+pillow==12.0.0
+platformdirs==4.5.0
+prometheus_client==0.23.1
+protobuf==6.33.1
+psutil==7.1.3
+pure_eval==0.2.3
+pyarrow==21.0.0
+pycparser==2.23
+Pygments==2.19.2
+pyogrio==0.11.1
+pyparsing==3.2.5
+pyproj==3.7.2
+python-dateutil==2.9.0.post0
+python-json-logger==4.0.0
+pytz==2025.2
+pywinpty==3.0.2
+PyYAML==6.0.3
+pyzmq==27.1.0
+rfc3986-validator==0.1.1
+rpds-py==0.29.0
+Send2Trash==1.8.3
+setuptools==80.9.0
+shapely==2.1.2
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+soupsieve==2.8
+tenacity==9.1.2
+tinycss2==1.4.0
+toml==0.10.2
+tornado==6.5.2
+traitlets==5.14.3
+typing_extensions==4.15.0
+tzdata==2025.2
+uri-template==1.3.0
+urllib3==2.5.0
+watchdog==6.0.0
+wcwidth==0.2.14
+webcolors==25.10.0
+webencodings==0.5.1
+websocket-client==1.9.0
+widgetsnbextension==4.0.15
+xyzservices==2025.11.0
