--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,13 @@
 certifi==2025.11.12
+charset-normalizer==3.4.4
+click==8.3.1
+colorama==0.4.6
 fastjsonschema==2.21.2
+geojson==3.2.0
+geomet==1.1.0
 geopandas==1.1.1
+html2text==2025.4.15
+idna==3.11
 jupyterlab_widgets==3.0.16
 kiwisolver==1.4.9
 lark==1.3.1
@@ -32,9 +39,11 @@ pytz==2025.2
 pywinpty==3.0.2
 PyYAML==6.0.3
 pyzmq==27.1.0
+requests==2.32.5
 rfc3986-validator==0.1.1
 rpds-py==0.29.0
 Send2Trash==1.8.3
+sentinelsat==1.2.1
 setuptools==80.9.0
 shapely==2.1.2
 six==1.17.0
@@ -45,6 +54,7 @@ tenacity==9.1.2
 tinycss2==1.4.0
 toml==0.10.2
 tornado==6.5.2
+tqdm==4.67.1
 traitlets==5.14.3
 typing_extensions==4.15.0
 tzdata==2025.2
